# Nmap Changelog ($Id$); -*-text-*-

o A bug in Nsock was fixed: On systems where a nonblocking connect
  could succeed immediately, connections that were requested to be
  tunnelled through SSL would actually be plain text. This could be
  verified with an Ncat client and server running on localhost. This
  was observed to happen with localhost connections on FreeBSD 7.2.
  Non-localhost connections were likely not affected. The bug was
  reported by Daniel Roethlisberger. [David]

o [NSE] Scripts that are listed by name with the --script option now
  have their verbosity level automatically increased by one. Many
  will print negative results ("no infection found") at a higher
  verbosity level. The idea is that if you ask for a script
  specifically, you are more interested in such results.
  [David, Patrick]

o [Ncat]Ncat proxy now hides the proxy's response
  ("HTTP/1.0 200 OK" or whatever it may be). Before, if you 
  retrieved a file through a proxy, it would have the "HTTP/1.0 200 OK" 
  stuck to the top of it. For this Ncat uses blocking sockets 
  untill the proxy negotiation is done and once it
  is successfull, Nsock takes over for rest of the connection.[Venkat]

o [Ncat] Fixed an error that would cause Ncat to use 100% CPU in
  broker mode after a client disconnected or a read error happened.
  [Kris, David]

o [Ncat] Ncat now prints a message like "Connection refused." by
  default when a socket error occurs. This used to require -v, but
  printing no message at all could make a failed connection look like
  success in a case like
    ncat remote < short-file

o [Ncat] Using --send-only in conjunction with the plain listen or broker modes
  now behaves as it should: nothing will be read from the network end.  Ncat
  was simply discarding any data received. [Kris]

o [Ncat] Added additional test cases to the ncat/test/test-cmdline-split program
  and rewrote the cmdline_split function in ncat_posix.c [Josh Marlow]
